--- a/UltimateRecyclerView/app/build.gradle
+++ b/UltimateRecyclerView/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.marshalchen.ultimaterecyclerview.demo"
-        minSdkVersion 15
+        minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION
         targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
 
         versionCode app_demo_versionCode
@@ -35,10 +35,7 @@ dependencies {
     debugCompile "com.squareup.leakcanary:leakcanary-android:${LEAKCANARY}"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY}"
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY}"
-    compile 'com.google.android.gms:play-services:7.3.0'
-    compile 'com.hkm.loyalslider:library:1.6.2'
+    compile "com.google.android.gms:play-services:${GOOGLE_PLAY_SERVICE_VERSION}"
     compile project(':ultimaterecyclerview')
     //used in the gridlayout
-    // compile 'com.hkm.loyalslider:library:1.4.5' exclude group: 'android.support.v13'
-
 }
