--- a/UltimateRecyclerView/gradle.properties
+++ b/UltimateRecyclerView/gradle.properties
@@ -1,22 +1,21 @@
-SUPPORT_LIBRARY=25.2.0
+SUPPORT_LIBRARY=25.4.0
 
-ANDROID_BUILD_MIN_SDK_VERSION=14
+ANDROID_BUILD_MIN_SDK_VERSION=15
 ANDROID_BUILD_TARGET_SDK_VERSION=25
 ANDROID_BUILD_SDK_VERSION=25
-ANDROID_BUILD_TOOLS_VERSION=25.0.1
+ANDROID_BUILD_TOOLS_VERSION=25.0.3
 
 #version check on @link https://github.com/square/leakcanary
-LEAKCANARY=1.4-beta2
-
-
-
+LEAKCANARY=1.5.1
+GLIDE_VERSION=4.0.0-RC1
+GOOGLE_PLAY_SERVICE_VERSION=10.2.6
 
 POM_NAME=ultimaterecyclerview
 POM_ARTIFACT_ID=library
 POM_PACKAGING=aar
 
-VERSION_NAME=0.7.2
-VERSION_CODE=32
+VERSION_NAME=0.7.3
+VERSION_CODE=34
 
 GROUP=com.marshalchen.ultimaterecyclerview
 
@@ -30,8 +29,6 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=cymcsg
 POM_DEVELOPER_NAME=marshalchen
-
-
 
 SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots
 RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2
