--- a/UltimateRecyclerView/app/build.gradle
+++ b/UltimateRecyclerView/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "com.marshalchen.ultimaterecyclerview.demo"
         minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION
         targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
+        multiDexEnabled true
 
         versionCode app_demo_versionCode
         versionName app_demo_versionName
@@ -31,11 +32,21 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${SUPPORT_LIBRARY}"
+    compile "com.android.support:mediarouter-v7:${SUPPORT_LIBRARY}"
     compile "com.android.support:cardview-v7:${SUPPORT_LIBRARY}"
+    compile "com.google.android.gms:play-services-ads:${GOOGLE_PLAY_SERVICE_VERSION}"
     debugCompile "com.squareup.leakcanary:leakcanary-android:${LEAKCANARY}"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY}"
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY}"
-    compile "com.google.android.gms:play-services:${GOOGLE_PLAY_SERVICE_VERSION}"
+
+    /* for demo app */
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    androidTestCompile('com.android.support:multidex-instrumentation:1.0.2') {
+        exclude group: 'com.android.support', module: 'multidex'
+    }
+    compile 'com.android.support:multidex:1.0.2'
+
     compile project(':ultimaterecyclerview')
     //used in the gridlayout
 }
