--- a/UltimateRecyclerView/gradle.properties
+++ b/UltimateRecyclerView/gradle.properties
@@ -1,21 +1,21 @@
-SUPPORT_LIBRARY=25.4.0
+SUPPORT_LIBRARY=27.0.0
 
 ANDROID_BUILD_MIN_SDK_VERSION=15
 ANDROID_BUILD_TARGET_SDK_VERSION=25
-ANDROID_BUILD_SDK_VERSION=25
-ANDROID_BUILD_TOOLS_VERSION=25.0.3
+ANDROID_BUILD_SDK_VERSION=27
+ANDROID_BUILD_TOOLS_VERSION=27.0.0
 
 #version check on @link https://github.com/square/leakcanary
-LEAKCANARY=1.5.1
-GLIDE_VERSION=4.0.0-RC1
-GOOGLE_PLAY_SERVICE_VERSION=10.2.6
+LEAKCANARY=1.5.4
+GLIDE_VERSION=4.2.0
+GOOGLE_PLAY_SERVICE_VERSION=11.4.2
 
 POM_NAME=ultimaterecyclerview
 POM_ARTIFACT_ID=library
 POM_PACKAGING=aar
 
-VERSION_NAME=0.7.3
-VERSION_CODE=34
+VERSION_NAME=0.7.4
+VERSION_CODE=40
 
 GROUP=com.marshalchen.ultimaterecyclerview
 
