--- a/UltimateRecyclerView/ultimaterecyclerview/build.gradle
+++ b/UltimateRecyclerView/ultimaterecyclerview/build.gradle
@@ -13,10 +13,9 @@ android {
     }
     buildTypes {
         libraryVariants.all { variant ->
-            variant.outputs.each { output ->
+            variant.outputs.all { output ->
                 def filename = output.outputFile.name
-                filename = filename.replace('.aar', '-' + defaultConfig.versionName + '.aar')
-                output.outputFile = new File(output.outputFile.parent, filename)
+                outputFileName = filename.replace('.aar', '-' + defaultConfig.versionName + '.aar')
             }
         }
 
@@ -43,7 +42,7 @@ dependencies {
     compile "com.android.support:support-v13:${SUPPORT_LIBRARY}"
     compile "com.android.support:recyclerview-v7:${SUPPORT_LIBRARY}"
     compile 'in.srain.cube:ultra-ptr:1.0.11'
-    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.7'
 
     compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
     compile "com.github.bumptech.glide:okhttp3-integration:${GLIDE_VERSION}"
