--- a/UltimateRecyclerView/app/src/main/AndroidManifest.xml
+++ b/UltimateRecyclerView/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".modules.MainWatcher"
+        android:name=".modules.MainApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:replace="android:icon,android:theme">
         <activity
-            android:name=".MainList"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
