--- a/UltimateRecyclerView/app/build.gradle
+++ b/UltimateRecyclerView/app/build.gradle
@@ -22,6 +22,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
 }
 repositories {
     flatDir {
